Bug 117346 - color of Auto-FILTER-▼-Button does not switch back from blue to black after Filter RESET, still shows old filter settings
Summary: color of Auto-FILTER-▼-Button does not switch back from blue to black after F...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.3.2 release
Hardware: All All
: medium minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: bibisected, bisected, regression
: 164314 (view as bug list)
Depends on:
Blocks: AutoFilter Calc-DataRange
  Show dependency treegraph
 
Reported: 2018-04-30 12:56 UTC by Rainer Bielefeld Retired
Modified: 2025-09-21 06:15 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (15.71 KB, application/vnd.oasis.opendocument.spreadsheet)
2018-04-30 12:56 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2018-04-30 12:56:02 UTC
Created attachment 141773 [details]
Sample Document

Steps how to reproduce with Version: 6.0.3.2 (x64)
Build-ID: 8f48d515416608e3a835360314dac7e47fd0b821
CPU-Threads: 4; BS: Windows 6.1; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group:

1. Form Start Center open attached "NEW_AutofilterNotResettable_004.ods"
2. Click Autofilter-▼
3. Type search string "11" → [ok]
   » only 3 lines containing "11" remain below heading "Wo"
4. Click on B4 containing "11"
5. Menu ˋData → More Filters → Reset Filterˊ
   As Expected: all hidden lines restored (except empty ones due to
                Bug 117328)
   Expected:  Auto-FILTER-▼-Button switch back from blue to black
   Bug:       Remains blue (means "filter active")                      😥

Additional info:
----------------
a) Symptom: If you click Autofilter-▼ after Step 5 and click 
            "Standard Filter" you will see some filter contents 
b) This is not a general problem with all documents, but the source document
   of the sample document here (an Excel-file) shows the problem in all 
   columns
c) Still REPRODUCIBLE with Version: 6.1.0.0.alpha0+ (x64)
   Build ID: c926a1e34672afaa5b7de0e3b08b1537e88fbb6f 
   OS: Windows 6.1; UI render: default; TinderBox: Win-x86_64@42, 
   Branch:master, Time: 2017-12-24_01:10:03 Locale: de-DE (de_DE); 
   Calc: CL, my default user profile, Tango theme
d) Version: 5.2.0.4 (x64) Build-ID: 066b007f5ebcc236395c7d282ba488bca6720265
   CPU-Threads: 4; BS-Version: Windows 6.1; UI-Render: Standard; 
   Gebietsschema: de-DE (de_DE) shows a different problem with 
   sample document: After step 5 Autofilter-▼ will disappear.
e) This issue is not in AOO420m1(Build:9800)  -  Rev. 1692551
Comment 1 raal 2018-04-30 13:42:45 UTC
I can confirm with Version: 6.1.0.0.alpha1+
Build ID: 653e58f9eb3d4ee61d8103993cdff2660c9127a5
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3;
Comment 2 Xisco Faulí 2018-05-02 11:19:07 UTC
Regression introduced by:

author	Eike Rathke <erack@redhat.com>	2018-02-15 12:50:40 +0100
committer	Eike Rathke <erack@redhat.com>	2018-02-15 12:51:41 +0100
commit 74d30155c5067271fb98bacbcb895c215e61678d (patch)
tree bb8a69a38fd38821b385f140868a1506745b973d
parent 09cb65bb92318bf8edb467fcd7720f072306f379 (diff)
Resolves: tdf#115046 don't restore a sheet-local DBData from temporary
And don't clear AutoFilter button flags in the new temporary range.

Bisected with: bibisect-linux64-6.1

Adding Cc: to Eike Rathke
Comment 3 Rainer Bielefeld Retired 2019-04-23 17:13:10 UTC
Still a bug in 6.3.
Comment 4 QA Administrators 2021-04-23 04:00:06 UTC Comment hidden (noise, obsolete)
Comment 5 NISZ LibreOffice Team 2021-05-10 08:27:32 UTC
Still a problem in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1675a68526c43c6c6e4dc850ee911f0c1de75c88
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 6 stragu 2021-06-16 07:01:13 UTC
Reproduced with recent master:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: de7356c2e0cb099fac396808b5a86a0393b48e5f
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-06-14_22:38:17
Calc: threaded

It's not only a cosmetic issue about a button's colour, but it's also very misleading as the old filter's settings are unchanged when clicking the autofilter dropdown (i.e. the displayed filter settings do not correspond to what is shown in the sheet).

I would suggest to change the importance from "minor" to "normal".
Comment 7 QA Administrators 2023-12-16 03:13:04 UTC Comment hidden (noise)
Comment 8 BogdanB 2024-12-17 06:20:18 UTC
*** Bug 164314 has been marked as a duplicate of this bug. ***
Comment 9 Johannes 2025-04-17 13:33:48 UTC
Still reproducible in
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ea4921a3e31cf87c60e2eceeec46cccdc6a79b23
CPU threads: 4; OS: Linux 6.14; UI render: default; VCL: kf5 (cairo+wayland)
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 10 Commit Notification 2025-06-19 11:02:02 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/06135b1102d28ae1c2d95e52504e824a9847bf12

tdf#117346 - Show current data range of the filter without selection

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-06-19 20:19:28 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/bd90bfb91c2378f2e0aca502c44b5c6502da4170

tdf#117346 - Show current data range of the filter without selection

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.