tdf#117346 - Show current data range of the filter without selection

After resetting the filter, show current data range of the filter with
selection. This reset also the filter button.

Change-Id: I3885e3d21ce3849abe4786621d0fc391b29f8b71
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186695
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 06135b1102d28ae1c2d95e52504e824a9847bf12)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186722
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>